--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "knex": "^0.21.5",
     "mysql2": "^2.1.0"
